--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
-    <title>Gifth</title>
+    <title>Stars Base</title>
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
     <script src="https://sad.adsgram.ai/js/sad.min.js"></script>
     <script 
