--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <script>
       function initAnalytics() {
         window.telegramAnalytics.init({
-          token: 'eyJhcHBfbmFtZSI6ImdpZnRoIiwiYXBwX3VybCI6Imh0dHBzOi8vdC5tZS9naWZ0aF9ib3QiLCJhcHBfZG9tYWluIjoiaHR0cHM6Ly9naWZ0aC52ZXJjZWwuYXBwLyJ9!2x7wAesmqnI2hQsrLfNa2Da2g6b7OHUxN/7s3pcbwtQ=', 
-          appName: 'starstake',
+          token: 'eyJhcHBfbmFtZSI6InN0YXJzX2Jhc2UiLCJhcHBfdXJsIjoiaHR0cHM6Ly90Lm1lL3N0YXJzYmFzZV9ib3QiLCJhcHBfZG9tYWluIjoiaHR0cHM6Ly9zdGFycy1zdGFrZS52ZXJjZWwuYXBwIn0=!zzyV4aJUUhhjxEvy86o4lHik/VBBcUZgUtsQtMVfeC0=', 
+          appName: 'starsbase_bot',
         });
       }
   </script>
