--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         type="text/javascript"
     ></script>
   </head>
-  <body>
+  <body
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="/src/index.tsx" type="module"></script>
