--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+    <meta name="theme-color" content="#0a0a0a"/>
     <title>Stars Base</title>
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
-    <script src="https://sad.adsgram.ai/js/sad.min.js"></script>
     <script 
         async 
         src="https://tganalytics.xyz/index.js" 
@@ -14,15 +13,15 @@
         type="text/javascript"
     ></script>
   </head>
-  <body
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="/src/index.tsx" type="module"></script>
     <script>
       function initAnalytics() {
         window.telegramAnalytics.init({
-          token: 'eyJhcHBfbmFtZSI6InN0YXJzX2Jhc2UiLCJhcHBfdXJsIjoiaHR0cHM6Ly90Lm1lL3N0YXJzYmFzZV9ib3QiLCJhcHBfZG9tYWluIjoiaHR0cHM6Ly9zdGFycy1zdGFrZS52ZXJjZWwuYXBwIn0=!zzyV4aJUUhhjxEvy86o4lHik/VBBcUZgUtsQtMVfeC0=', 
-          appName: 'starsbase_bot',
+          token: 'eyJhcHBfbmFtZSI6ImdpZnRoIiwiYXBwX3VybCI6Imh0dHBzOi8vdC5tZS9naWZ0aF9ib3QiLCJhcHBfZG9tYWluIjoiaHR0cHM6Ly9naWZ0aC52ZXJjZWwuYXBwLyJ9!2x7wAesmqnI2hQsrLfNa2Da2g6b7OHUxN/7s3pcbwtQ=', 
+          appName: 'gifth',
         });
       }
   </script>
