--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <script>
       function initAnalytics() {
         window.telegramAnalytics.init({
-          token: 'eyJhcHBfbmFtZSI6ImdpZnRoIiwiYXBwX3VybCI6Imh0dHBzOi8vdC5tZS9naWZ0aF9ib3QiLCJhcHBfZG9tYWluIjoiaHR0cHM6Ly9naWZ0aC52ZXJjZWwuYXBwLyJ9!2x7wAesmqnI2hQsrLfNa2Da2g6b7OHUxN/7s3pcbwtQ=', 
-          appName: 'gifth',
+          token: 'eyJhcHBfbmFtZSI6InN0YXJzYmFzZV9ib3QiLCJhcHBfdXJsIjoiaHR0cHM6Ly90Lm1lL3N0YXJzYmFzZV9ib3QiLCJhcHBfZG9tYWluIjoiaHR0cHM6Ly9zdGFycy1iYXNlLnZlcmNlbC5hcHAifQ==!ucpf0XTiZcjYBI5xKX1EQEQwo19T8ieS9p4K+sbZrrg=', 
+          appName: 'starsbase_bot',
         });
       }
   </script>
