--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <script>
       function initAnalytics() {
         window.telegramAnalytics.init({
-          token: 'eyJhcHBfbmFtZSI6InN0YXJzYmFzZV9ib3QiLCJhcHBfdXJsIjoiaHR0cHM6Ly90Lm1lL3N0YXJzYmFzZV9ib3QiLCJhcHBfZG9tYWluIjoiaHR0cHM6Ly9zdGFycy1iYXNlLnZlcmNlbC5hcHAifQ==!ucpf0XTiZcjYBI5xKX1EQEQwo19T8ieS9p4K+sbZrrg=', 
-          appName: 'starsbase_bot',
+          token: 'eyJhcHBfbmFtZSI6InN0YXJzYmFzZWJvdCIsImFwcF91cmwiOiJodHRwczovL3QubWUvc3RhcnNiYXNlX2JvdCIsImFwcF9kb21haW4iOiJodHRwczovL3N0YXJzLWJhc2UudmVyY2VsLmFwcCJ9!0s+1/ZmdCLfiq8vJgh1jrbf2JN4faR6B9k7SOhrFCm8=', 
+          appName: 'starsbasebot',
         });
       }
   </script>
