Changed Rounded font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#0a0a0a"/>
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+    <link
+      rel="preload"
+      href="https://tgusd-miniapp.torch.finance/fonts/SF-Pro-Rounded-Regular.woff"
+      as="font"
+      type="font/woff"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="https://tgusd-miniapp.torch.finance/fonts/SF-Pro-Rounded-Medium.woff"
+      as="font"
+      type="font/woff"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="https://tgusd-miniapp.torch.finance/fonts/SF-Pro-Rounded-Semibold.woff"
+      as="font"
+      type="font/woff"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="https://tgusd-miniapp.torch.finance/fonts/SF-Pro-Rounded-Bold.woff"
+      as="font"
+      type="font/woff"
+      crossorigin
+    />
     <title>Stars Base</title>
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
     <script 
